- JWK-Koordinaten sind nun BigEndian kodiert - Datentypen in Fehlermeldungen korrigiert