@@ -18,8 +18,20 @@ package de.gematik.idp.server.controllers;
 
 import static de.gematik.idp.IdpConstants.DISCOVERY_DOCUMENT_ENDPOINT;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+import javax.annotation.PostConstruct;
+import javax.servlet.http.HttpServletRequest;
+
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import de.gematik.idp.authentication.IdpJwtProcessor;
 import de.gematik.idp.crypto.model.PkiIdentity;
 import de.gematik.idp.data.IdpDiscoveryDocument;
@@ -30,17 +42,8 @@ import de.gematik.idp.server.ServerUrlService;
 import de.gematik.idp.server.exceptions.IdpServerException;
 import de.gematik.idp.server.services.DiscoveryDocumentBuilder;
 import de.gematik.idp.server.validation.clientSystem.ValidateClientSystem;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import javax.annotation.PostConstruct;
-import javax.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import net.dracoblue.spring.web.mvc.method.annotation.HttpResponseHeader;
-import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
@@ -65,37 +68,37 @@ public class DiscoveryDocumentController {
         identities.add(idpSig.getIdentity());
         identities.add(idpEnc.getIdentity());
         return IdpJwksDocument.builder()
-            .keys(identities.stream()
-                .map(identity -> {
-                    final IdpKeyDescriptor keyDesc = IdpKeyDescriptor
-                        .constructFromX509Certificate(identity.getCertificate(),
-                            identity.getKeyId(),
-                            identity.getKeyId()
-                                .map(id -> !id.equals("puk_idp_enc"))
-                                .orElse(false));
-                    keyDesc.setPublicKeyUse(identity.getUse().orElse(null));
-                    return keyDesc;
-                })
-                .collect(Collectors.toList()))
-            .build();
+                .keys(identities.stream()
+                        .map(identity -> {
+                            final IdpKeyDescriptor keyDesc = IdpKeyDescriptor
+                                    .constructFromX509Certificate(identity.getCertificate(),
+                                            identity.getKeyId(),
+                                            identity.getKeyId()
+                                                    .map(id -> !id.equals("puk_idp_enc"))
+                                                    .orElse(false));
+                            keyDesc.setPublicKeyUse(identity.getUse().orElse(null));
+                            return keyDesc;
+                        })
+                        .collect(Collectors.toList()))
+                .build();
     }
 
-    @GetMapping(value = {DISCOVERY_DOCUMENT_ENDPOINT, "/discoveryDocument",
-        "auth/realms/idp/.well-known/openid-configuration"},
-        produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = { DISCOVERY_DOCUMENT_ENDPOINT, "/discoveryDocument",
+            "auth/realms/idp/.well-known/openid-configuration" }, produces = "application/jwt;charset=UTF-8")
     @ValidateClientSystem
     @HttpResponseHeader(name = "Cache-Control", value = "#{environment.getProperty('caching.discoveryDocument.cacheControl')}", valueExpression = true)
     public String getDiscoveryDocument(final HttpServletRequest request) {
         return signDiscoveryDocument(discoveryDocumentBuilder
-            .buildDiscoveryDocument(serverUrlService.determineServerUrl(request),
-                serverUrlService.getIssuerUrl()));
+                .buildDiscoveryDocument(serverUrlService.determineServerUrl(request),
+                    serverUrlService.getIssuerUrl()));
     }
 
     private String signDiscoveryDocument(final IdpDiscoveryDocument discoveryDocument) {
         try {
             return jwtProcessor
-                .buildJws(objectMapper.writeValueAsString(discoveryDocument), Collections.emptyMap(), true)
-                .getRawString();
+                    .buildJws(
+                        objectMapper.writeValueAsString(discoveryDocument), Map.ofEntries(Map.entry("typ", "JWT")), true)
+                    .getRawString();
         } catch (final JsonProcessingException e) {
             throw new IdpServerException(2100, IdpErrorType.SERVER_ERROR, "Ein Fehler ist aufgetreten", e);
         }
